Fix overflow text not wrapped issue #1

--- a/codeblock_wrap.css
+++ b/codeblock_wrap.css
@@ -1,6 +1,18 @@
-code {
-	white-space: pre-wrap !important;
+pre, code{
+  word-wrap: break-word !important;
+  overflow-wrap:break-word !important;
+  background-color: #f8f8f8 !important;
+  white-space: pre-wrap !important;
 }
-pre {
-	white-space: pre-wrap !important;
+
+img {
+  width: 100%;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
 }
